--- a/css/styles.css
+++ b/css/styles.css
@@ -10970,6 +10970,9 @@ html {
 .masthead {
   padding-top: calc(6rem + 74px);
   padding-bottom: 6rem;
+  background: url('assets/img/ecran.jpg') no-repeat center center;
+  background-size: cover;
+}
 }
 .masthead .masthead-heading {
   font-size: 2.75rem;
